--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,30 @@
             app:layout_constraintVertical_bias="0.2"
             tools:layout_editor_absoluteX="-16dp">
 
+            <TextView
+                android:id="@+id/login_tvSignin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_signin"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                />
+
+            <TextView
+                android:id="@+id/login_tvError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_loginError"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                tools:visibility="visible"
+                android:textColor="@color/red"
+                android:paddingBottom="15dp"
+                />
+
             <EditText
                 android:id="@+id/login_etUsername"
                 android:layout_width="match_parent"
@@ -65,6 +89,21 @@
                 android:drawableEnd="@drawable/ic_login"
                 android:layout_margin="10dp"
                 />
+
+            <Button
+                android:id="@+id/btn_gotoRegister"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/hollow_background"
+                android:fontFamily="sans-serif-black"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:drawableEnd="@drawable/ic_signup"
+                android:text="@string/login_btnSignup"
+                />
+
         </LinearLayout>
 
         <LinearLayout
