--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -21,7 +21,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="20dp"
-                tools:src="@drawable/icon_user_default"/>
+                tools:src="@drawable/icon_user_default" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -34,10 +34,10 @@
                     android:id="@+id/user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="User Name"
                     android:textColor="@color/white"
                     android:textSize="25dp"
                     android:textStyle="bold"
+                    tools:text="User Name"
 
                     />
 
@@ -45,11 +45,10 @@
                     android:id="@+id/last_massage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="Hi, how are you?"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/white"
                     android:textSize="10dp"
-                    android:layout_marginTop="5dp"
-                    />
+                    tools:text="Hi, how are you?" />
 
             </LinearLayout>
 
@@ -59,12 +58,11 @@
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="10:00"
+            android:layout_alignParentRight="true"
+            android:padding="15dp"
             android:textColor="@color/white"
             android:textSize="15dp"
-            android:padding="15dp"
-            android:layout_alignParentRight="true"
-            />
+            tools:text="10:00" />
 
     </RelativeLayout>
 
