--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="gray">#808080</color>
+    <color name="light_gray">#C0C0C0</color>
+    <color name="light_blue">#B5D3E7</color>
+
 </resources>
