--- a/app/src/main/res/layout/right_message.xml
+++ b/app/src/main/res/layout/right_message.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@drawable/right_message">
+        android:background="@drawable/right_message"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -18,7 +19,7 @@
             android:layout_marginStart="8dp"
             android:orientation="vertical"
             android:padding="10dp"
-            android:layout_alignParentRight="true">
+            >
 
             <TextView
                 android:id="@+id/tvContent"
