--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -7,6 +7,17 @@
     tools:context=".ContactsActivity"
     android:background="@color/black">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:id="@+id/refreshLayout">
+     <androidx.recyclerview.widget.RecyclerView
+     android:id="@+id/listContacts"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:background="@android:color/darker_gray"/>
+     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
