--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,7 +15,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="970dp"
+            android:layout_height="match_parent"
             android:layout_weight="6"
             android:orientation="horizontal">
 
@@ -24,19 +25,21 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/icon_user_default"
-                tools:ignore="NestedWeights" />
+                tools:ignore="NestedWeights"
+                />
 
             <TextView
                 android:id="@+id/tvFriendNickname"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:layout_weight="5"
-                android:text="Nickname"
                 android:textAlignment="center"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                tools:text="Nickname" />
+                tools:text="Nickname"
+                android:layout_margin="10dp"
+                android:text="Nickname"
+                />
         </LinearLayout>
 
         <ListView
