--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -8,6 +8,17 @@
     android:layout_weight="1"
     android:background="@color/light_green">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/refreshLayout">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/lstContacts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/darker_gray"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -48,8 +59,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             tools:listitem="@layout/right_message">
-
         </ListView>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,6 +94,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
+
         </LinearLayout>
 
     </LinearLayout>
