--- a/app/src/main/res/drawable/right_message.xml
+++ b/app/src/main/res/drawable/right_message.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <stroke android:color="@color/black" android:width="5dp" />
     <corners android:radius="50dp"/>
-    <solid android:color="@color/light_gray"/>
+    <solid android:color="@color/light_blue" />
 </shape>
