--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:padding="15dp"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             android:textSize="15dp"
             tools:text="10:00" />
 
