--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="gray">#808080</color>
     <color name="light_gray">#C0C0C0</color>
     <color name="light_blue">#B5D3E7</color>
+    <color name="green">#69FD59</color>
 
 </resources>
