--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -18,7 +18,7 @@
         tools:layout_editor_absoluteX="10dp">
 
         <EditText
-            android:id="@+id/usernameField"
+            android:id="@+id/contactNameField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -31,7 +31,7 @@
             android:textStyle="bold"/>
 
         <EditText
-            android:id="@+id/nicknameField"
+            android:id="@+id/contactNicknameField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
