--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -4,19 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_green">
+    android:background="@android:color/darker_gray">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/refreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/lstContacts"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/darker_gray" />
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -37,7 +27,7 @@
                 android:layout_width="160dp"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/icon_user_default"
-                tools:ignore="NestedWeights" />
+                tools:ignore="NestedWeights"/>
 
             <TextView
                 android:id="@+id/tvFriendNickname"
@@ -52,13 +42,31 @@
                 tools:text="Nickname" />
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/lvMessageList"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refreshLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/llInput"
-            app:layout_constraintTop_toBottomOf="@+id/llContactBar"
-            tools:listitem="@layout/right_message" />
+            app:layout_constraintTop_toBottomOf="@+id/llContactBar">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/lvMessageList"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/llInput"
+                app:layout_constraintTop_toBottomOf="@+id/llContactBar"
+                android:background="@android:color/darker_gray"
+                tools:listitem="@layout/left_message"
+                />
+<!--                    <ListView-->
+<!--                        android:id="@+id/lvMessageList"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        app:layout_constraintBottom_toTopOf="@+id/llInput"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/llContactBar"-->
+<!--                        tools:listitem="@layout/left_message" />-->
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
         <LinearLayout
             android:id="@+id/llInput"
