time format, transfer and invitation - friend url new view to chat

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="light_gray">#C0C0C0</color>
     <color name="light_blue">#B5D3E7</color>
     <color name="green">#69FD59</color>
+    <color name="turquoise">#63d2c5</color>
 
 </resources>
