--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray">
+    android:background="@drawable/chat_background">
 
 
 
@@ -20,11 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="@color/turquoise"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/ivFriendPic"
-                android:layout_width="160dp"
+                android:layout_width="180dp"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/icon_user_default"
                 tools:ignore="NestedWeights"/>
@@ -55,7 +56,6 @@
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toTopOf="@+id/llInput"
                 app:layout_constraintTop_toBottomOf="@+id/llContactBar"
-                android:background="@android:color/darker_gray"
                 tools:listitem="@layout/left_message"
                 />
 <!--                    <ListView-->
@@ -78,7 +78,7 @@
             <EditText
                 android:id="@+id/etTextInput"
                 android:layout_width="wrap_content"
-                android:layout_height="65dp"
+                android:layout_height="55dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="13"
@@ -87,7 +87,8 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:textAlignment="center"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:background="@drawable/input_frame"/>
 
             <Button
                 android:id="@+id/btnSend"
