saving contacts and messages from the api in the dao

--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -46,8 +46,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:textColor="@color/white"
-                    android:textSize="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
                     tools:text="Hi, how are you?" />
 
             </LinearLayout>
