--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -21,6 +21,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 tools:src="@drawable/icon_user_default" />
 
             <LinearLayout
