--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/light_green"
-        android:endColor="@color/white"
+        android:startColor="@color/teal_200"
+        android:endColor="@color/light_blue"
         android:type="linear"
         android:angle="315"
         />
