--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -26,7 +26,7 @@
             <ImageView
                 android:id="@+id/ivFriendPic"
                 android:layout_width="180dp"
-                android:layout_height="match_parent"
+                android:layout_height="80dp"
                 app:srcCompat="@drawable/icon_user_default"
                 tools:ignore="NestedWeights"/>
 
