--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -23,7 +23,9 @@
 
             <ImageView
                 android:id="@+id/ivUserPic"
-                android:layout_width="180dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginStart="7dp"
+                android:layout_width="80dp"
                 android:layout_height="80dp"
                 app:srcCompat="@drawable/icon_user_default"
                 tools:ignore="NestedWeights" />
@@ -33,7 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="15dp"
                 android:text="@string/etNickname"
                 android:textAlignment="center"
                 android:textSize="30sp"
